---------------------------------------------------------------------------------------------------
Version: 0.13.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.13.0
Date: 2022-11-12
  Features:
    - Added feature to export blueprint book to a file (in script-output).
    - Added feature to enable/disable all entities in a stage.
  Bugfixes:
    - Fixed tiles in blueprints being offset when grid position is set.
    - Fixed auto-landfill option not doing anything
  GUI:
    - Reorganized staged build settings gui.
---------------------------------------------------------------------------------------------------
Version: 0.12.0
Date: 2022-11-09
  Features:
    - Added option to replace infinity chests/pipes with constant combinators in blueprints.
  Changes:
    - Updated locale.
---------------------------------------------------------------------------------------------------
Version: 0.11.1
Date: 2022-11-07
  Gui:
    - Aligned stage buttons in entity info gui.
    - Remove build settings window auto-centering.
---------------------------------------------------------------------------------------------------
Version: 0.11.0
Date: 2022-11-06
  Features:
    - Added a filtered stage move tool.
    - Added blueprint filters.
  Changes:
    - The stage move tool shortcut icon is now blue.
---------------------------------------------------------------------------------------------------
Version: 0.10.6
Date: 2022-11-06
  Bugfixes:
    - Fix loaders being in the wrong direction when created in other stages.
    - Minor issue fixed (remove obsolete saved info)
---------------------------------------------------------------------------------------------------
Version: 0.10.5
Date: 2022-11-06
  Bugfixes:
    - Fixed interactions with dragging belt
  Changes:
    - Removed new staged build gui
    - Improved locale/descriptions